--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link 
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Sofia+Sans:wght@400;600&display=swap" 
+            rel="stylesheet" />
+        <link rel="stylesheet" href="grid_autofit.css" />
+        <link rel="stylesheet" href="./index.css" />
+        <title>Jocelyn Chen</title>
+</head>
+    <body>
+        <div class="page-container">
+            <h1 class="header">Jocelyn Chen</h1>
+            <h2>projects</h2>
+
+
+        </div>
+    </body>
 </html>
