--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Sofia+Sans:wght@400;600&display=swap" 
             rel="stylesheet" />
         <link rel="stylesheet" href="grid_autofit.css" />
-        <link rel="stylesheet" href="./index.css" />
+        <link rel="stylesheet" href="./styles.css" />
         <title>Jocelyn Chen</title>
 </head>
     <body>
