add nav bar and footer

--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
         <link 
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Sofia+Sans:wght@400;600&display=swap" 
             rel="stylesheet" />
-        <link rel="stylesheet" href="grid_autofit.css" />
         <link rel="stylesheet" href="./styles.css" />
         <title>Jocelyn Chen</title>
 </head>
     <body>
+        <div id="nav-bar">
+			<a href="#home-section" class="nav-item right">Jocelyn Chen</a>
+            <a href="#contact-section" class="nav-item left">Contact</a>
+            <a href="#projects-section" class="nav-item left">Projects</a>
+			<a href="#about-section" class="nav-item left">About</a>
+        </div>
         <div class="page-container">
-            <h1 class="header">Jocelyn Chen</h1>
-            <h2>projects</h2>
-
-
+            <div class="landing-section">
+                <h1 class="header">Jocelyn Chen</h1>
+            </div>
+            <div class="projects-section">
+                <h2>projects</h2>   
+            </div>
+        <footer class="footer">
+                <p>jocelyn portfolio 2024</p>
+            </footer>  
         </div>
     </body>
 </html>
