--- a/index.html
+++ b/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link 
-            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Sofia+Sans:wght@400;600&display=swap" 
-            rel="stylesheet" />
-        <link rel="stylesheet" href="./styles.css" />
-        <title>Jocelyn Chen</title>
-</head>
-    <body>
-        <div id="nav-bar">
-			<a href="#home-section" class="nav-item right">Jocelyn Chen</a>
-            <a href="#contact-section" class="nav-item left">Contact</a>
-            <a href="#projects-section" class="nav-item left">Projects</a>
-			<a href="#about-section" class="nav-item left">About</a>
-        </div>
-        <div class="page-container">
-            <div class="landing-section">
-                <h1 class="header">Jocelyn Chen</h1>
-            </div>
-            <div class="projects-section">
-                <h2>projects</h2>   
-            </div>
-        <footer class="footer">
-                <p>jocelyn portfolio 2024</p>
-            </footer>  
-        </div>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--CSS Styles -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
+    <!-- Animate CSS CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>Jocelyn Chen | UX Designer</title>
+  </head>
+
+  <body>
+    <!-- Navbar -->
+    <nav>
+
+		<div id="nav-bar">
+			<a href="#home" class="nav-item">Jocelyn Chen</a>
+            <a href="#contact" class="nav-item">Contact</a>
+            <a href="#projects" class="nav-item">Projects</a>
+			<a href="#about" class="nav-item">About</a>
+		</div>
+
+
+        <button class="burger-menu" id="burger-menu">
+          <ion-icon class="bars" name="menu-outline"></ion-icon>
+        </button>
+    </nav>
+
+    <!-- Hero Section -->
+
+    <!-- More about -->
+
+    <!-- Skills section -->
+
+    <!-- Projects section -->
+
+    <!-- Contact section -->
+
+    <!-- Social accounts - Fixed to the right -->
+
+    <!-- Scroll to top -->
+
+    <!-- Footer section -->
+
+    <!-- Website scripts -->
+    <script src="assets/js/app.js"></script>
+
+    <!-- Ion icons scripts -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
