change navbar to list

--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--CSS Styles -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
+        <!--CSS Styles -->
+        <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <!-- Animate CSS CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <title>Jocelyn Chen | UX Designer</title>
+        <!-- Animate CSS CDN -->
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+        <title>Jocelyn Chen | UX Designer</title>
   </head>
 
   <body>
-    <!-- Navbar -->
-    <nav>
+        <!-- Navbar -->
+        <nav>
+   
+            <h1>jocelyn</h1>
+            <ul class="nav-bar">
+                <li><a href="#about" class="nav-item">About</a></li>
+                <li><a href="#projects" class="nav-item">Projects</a></li>
+                <li><a href="#contact" class="nav-item">Contact</a></li>
+            </ul>
+            <button class="burger-menu" id="burger-menu">
+                <ion-icon class="bars" name="menu-outline"></ion-icon>
+            </button>
+        </nav>
 
-		<div id="nav-bar">
-			<a href="#home" class="nav-item">Jocelyn Chen</a>
-            <a href="#contact" class="nav-item">Contact</a>
-            <a href="#projects" class="nav-item">Projects</a>
-			<a href="#about" class="nav-item">About</a>
-		</div>
+        <!-- Hero Section -->
 
+        <!-- More about -->
 
-        <button class="burger-menu" id="burger-menu">
-          <ion-icon class="bars" name="menu-outline"></ion-icon>
-        </button>
-    </nav>
+        <!-- Skills section -->
 
-    <!-- Hero Section -->
+        <!-- Projects section -->
 
-    <!-- More about -->
+        <!-- Contact section -->
 
-    <!-- Skills section -->
+        <!-- Social accounts - Fixed to the right -->
 
-    <!-- Projects section -->
+        <!-- Scroll to top -->
 
-    <!-- Contact section -->
+        <!-- Footer section -->
 
-    <!-- Social accounts - Fixed to the right -->
+        <!-- Website scripts -->
+        <script src="assets/js/app.js"></script>
 
-    <!-- Scroll to top -->
-
-    <!-- Footer section -->
-
-    <!-- Website scripts -->
-    <script src="assets/js/app.js"></script>
-
-    <!-- Ion icons scripts -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-  </body>
+        <!-- Ion icons scripts -->
+        <script
+            type="module"
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js">
+        </script>
+        <script
+            nomodule
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">
+        </script>
+    </body>
 </html>
