--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <body>
         <!-- Navbar -->
         <nav>
-   
-            <h1>jocelyn</h1>
             <ul class="nav-bar">
-                <li><a href="#about" class="nav-item">About</a></li>
-                <li><a href="#projects" class="nav-item">Projects</a></li>
-                <li><a href="#contact" class="nav-item">Contact</a></li>
+                <li ><a href="#home" class="home-link">Jocelyn Chen</a></li>
+                <li ><a href="#about" class="nav-item">About</a></li>
+                <li ><a href="#projects" class="nav-item">Projects</a></li>
+                <li ><a href="#contact" class="nav-item">Contact</a></li>
+                <li ><a class="active"></a></li>
             </ul>
             <button class="burger-menu" id="burger-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
