--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <nav>
             <ul class="nav-bar">
                 <li ><a href="#home" class="home-link">Jocelyn Chen</a></li>
-                <li ><a href="#about" class="nav-item">About</a></li>
-                <li ><a href="#projects" class="nav-item">Projects</a></li>
                 <li ><a href="#contact" class="nav-item">Contact</a></li>
+                <li ><a href="#projects" class="nav-item">Projects</a></li>
+                <li ><a href="#about" class="nav-item">About</a></li>
                 <li ><a class="active"></a></li>
             </ul>
             <button class="burger-menu" id="burger-menu">
@@ -32,6 +32,23 @@
         </nav>
 
         <!-- Hero Section -->
+        <section class="hero" id="about">
+            <img
+                src="assets/images/profile.jpg"
+                alt="jocelyn-chen"
+                loading="loading"
+                class="hero-img"
+            />
+            <div class="bio animate__animated animate__shakeX">
+                <h2 class="bio-title">About Me</h2>
+                <p class="bio-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+                    dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+                    inventore tempore minus nemo, iste ullam illo laboriosam maiores
+                    repudiandae quos!
+                </p>
+            </div>
+        </section>
 
         <!-- More about -->
 
