projects and footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img
                 src="assets/images/profile.jpg"
                 alt="jocelyn-chen"
-                loading="loading"
+                loading="lazy"
                 class="hero-img"
             />
             <div class="bio animate__animated animate__shakeX">
@@ -50,19 +50,86 @@
             </div>
         </section>
 
-        <!-- More about -->
-
-        <!-- Skills section -->
-
         <!-- Projects section -->
+        <section class="projects" id="projects">
+            <h2 class="projects-title">Some of my Recent Projects</h2>
+            <div class="projects-container">
+                <div class="project-container project-card">
+                    <img
+                        src="assets/images/expenseTracker.png"
+                        alt="expense-tracker"
+                        loading="lazy"
+                        class="project-pic"
+                    />
+                    <h3 class="project-title">Expense Tracker</h3>
+                    <p class="project-details">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                        ratione vel inventore labore commodi modi quos culpa aut saepe!
+                        Alias!
+                    </p>
+                    <a href="#" target="_blank" class="project-link">Check it Out</a>
+                </div>
+                <div class="project-container project-card">
+                    <img
+                        src="assets/images/netflixClone.png"
+                        alt="netflic-clone"
+                        loading="lazy"
+                        class="project-pic"
+                    />
+                    <h3 class="project-title">Netflix Clone</h3>
+                    <p class="project-details">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                        ratione vel inventore labore commodi modi quos culpa aut saepe!
+                        Alias!
+                    </p>
+                    <a href="#" target="_blank" class="project-link">Check it Out</a>
+                </div>
+                <div class="project-container project-card">
+                    <img
+                        src="assets/images/greenyEarth.png"
+                        alt="greeny-earth"
+                        loading="lazy"
+                        class="project-pic"
+                    />
+                    <h3 class="project-title">Greeny Earth</h3>
+                    <p class="project-details">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                        ratione vel inventore labore commodi modi quos culpa aut saepe!
+                        Alias!
+                    </p>
+                    <a href="#" target="_blank" class="project-link">Check it Out</a>
+                </div>
+            </div>
+        </section>
 
         <!-- Contact section -->
 
-        <!-- Social accounts - Fixed to the right -->
+
 
         <!-- Scroll to top -->
 
         <!-- Footer section -->
+        <footer>
+            <div class="footer-links">
+                <a href="https://www.linkedin.com/in/jocelyn-chen-/" target="_blank">
+                    <img
+                        src="assets/icons/linkedin-32.svg"
+                        alt="Linked-In"
+                        loading="lazy"
+                        class="footer-icon"
+                    />
+                </a>
+                <a href="mailto: jocelynchen1126@gmail.com" target="_blank">
+                    <img
+                        src="assets/icons/email-32.svg"
+                        alt="Linked-In"
+                        loading="lazy"
+                        class="footer-icon"
+                    />
+                </a>
+            </div>
+            <p class="copy">&copy; 2024 Jocelyn Chen</p>
+        </footer>
 
         <!-- Website scripts -->
         <script src="assets/js/app.js"></script>
