add responsive layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-        <!-- Navbar -->
+        <!-- Navbar 
         <nav>
             <ul class="nav-bar">
                 <li ><a href="#home" class="home-link">Jocelyn Chen</a></li>
@@ -30,7 +30,20 @@
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </nav>
-
+    -->
+        <nav>
+            <a href="" class="home-item">Jocelyn Chen</a>
+            <ul class="nav-bar">
+                <li ><a href="#about" class="nav-item">About</a></li>
+                <li ><a href="#projects" class="nav-item">Projects</a></li>
+                <li ><a href="#contact" class="nav-item">Contact</a></li>
+                <li ><a class="active"></a></li>
+            </ul>
+            <button class="burger-menu" id="burger-menu">
+              <ion-icon class="bars" name="menu-outline"></ion-icon>
+            </button>
+        </nav>
+        
         <!-- Hero Section -->
         <section class="hero" id="about">
             <img
@@ -107,13 +120,20 @@
 
 
         <!-- Scroll to top -->
+        <i class="scroll-up" id="scroll-up">
+            <img
+                src="assets/icons/iconamoon_arrow-up-6-circle-fill-32.svg"
+                class="socicon up-arrow"
+                alt="scroll-up"
+            />
+        </i>
 
         <!-- Footer section -->
         <footer>
             <div class="footer-links">
                 <a href="https://www.linkedin.com/in/jocelyn-chen-/" target="_blank">
                     <img
-                        src="assets/icons/linkedin-32.svg"
+                        src="assets/icons/mdi_linkedin-32.svg"
                         alt="Linked-In"
                         loading="lazy"
                         class="footer-icon"
@@ -121,7 +141,7 @@
                 </a>
                 <a href="mailto: jocelynchen1126@gmail.com" target="_blank">
                     <img
-                        src="assets/icons/email-32.svg"
+                        src="assets/icons/mdi_email-outline-32.svg"
                         alt="Linked-In"
                         loading="lazy"
                         class="footer-icon"
