edit responsive layout hamburger menu

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <nav>
             <a href="" class="home-item">Jocelyn Chen</a>
             <ul class="nav-bar">
+                <li ><a class="active"></a></li>
                 <li ><a href="#about" class="nav-item">About</a></li>
                 <li ><a href="#projects" class="nav-item">Projects</a></li>
                 <li ><a href="#contact" class="nav-item">Contact</a></li>
