work on about page and css hover

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </nav>
     -->
         <nav>
-            <a href="" class="home-item">Jocelyn Chen</a>
+            <a href=".." class="home-item">Jocelyn Chen</a>
             <ul class="nav-bar">
                 <li ><a class="active"></a></li>
-                <li ><a href="#about" class="nav-item">About</a></li>
+                <li ><a href="./about.html" class="nav-item">About</a></li>
                 <li ><a href="#projects" class="nav-item">Projects</a></li>
                 <li ><a href="#contact" class="nav-item">Contact</a></li>
                 <li ><a class="active"></a></li>
@@ -48,12 +48,13 @@
         <!-- Hero Section -->
         <section class="hero" id="about">
             <img
-                src="assets/images/profile.jpg"
+                src="./assets/images/profile.jpg"
                 alt="jocelyn-chen"
                 loading="lazy"
                 class="hero-img"
             />
-            <div class="bio animate__animated animate__shakeX">
+            <!-- animate__animated animate__shakeX -->
+            <div class="bio">
                 <h2 class="bio-title">About Me</h2>
                 <p class="bio-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
@@ -122,31 +123,17 @@
 
         <!-- Scroll to top -->
         <i class="scroll-up" id="scroll-up">
-            <img
-                src="assets/icons/iconamoon_arrow-up-6-circle-fill-32.svg"
-                class="socicon up-arrow"
-                alt="scroll-up"
-            />
+            <i class="fa-solid fa-circle-chevron-up fa-2xl"></i>
         </i>
 
         <!-- Footer section -->
         <footer>
             <div class="footer-links">
-                <a href="https://www.linkedin.com/in/jocelyn-chen-/" target="_blank">
-                    <img
-                        src="assets/icons/mdi_linkedin-32.svg"
-                        alt="Linked-In"
-                        loading="lazy"
-                        class="footer-icon"
-                    />
+                <a href="https://www.linkedin.com/in/jocelyn-chen-/" target="_blank" class="footer-icon">
+                    <i class="fa-brands fa-linkedin fa-2xl"></i>
                 </a>
-                <a href="mailto: jocelynchen1126@gmail.com" target="_blank">
-                    <img
-                        src="assets/icons/mdi_email-outline-32.svg"
-                        alt="Linked-In"
-                        loading="lazy"
-                        class="footer-icon"
-                    />
+                <a href="mailto: jocelynchen1126@gmail.com" target="_blank" class="footer-icon">
+                    <i class="fa-regular fa-envelope fa-2xl"></i>
                 </a>
             </div>
             <p class="copy">&copy; 2024 Jocelyn Chen</p>
@@ -163,6 +150,12 @@
         <script
             nomodule
             src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">
+        </script>
+
+        <!-- Font Awesome icons scripts -->
+        <script 
+            src="https://kit.fontawesome.com/a2a7dc6fc7.js" 
+            crossorigin="anonymous">
         </script>
     </body>
 </html>
