--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
         <nav>
             <a href=".." class="home-item">Jocelyn Chen</a>
             <ul class="nav-bar">
-                <li ><a class="active"></a></li>
-                <li ><a href="./about.html" class="nav-item">About</a></li>
                 <li ><a href="#projects" class="nav-item">Projects</a></li>
+                <li ><a href="./about.html" class="nav-item">About</a></li>
                 <li ><a href="#contact" class="nav-item">Contact</a></li>
-                <li ><a class="active"></a></li>
             </ul>
             <button class="burger-menu" id="burger-menu">
               <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -47,72 +45,114 @@
         
         <!-- Hero Section -->
         <section class="hero" id="about">
-            <img
-                src="./assets/images/profile.jpg"
-                alt="jocelyn-chen"
-                loading="lazy"
-                class="hero-img"
-            />
-            <!-- animate__animated animate__shakeX -->
-            <div class="bio">
-                <h2 class="bio-title">About Me</h2>
-                <p class="bio-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-                    dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-                    inventore tempore minus nemo, iste ullam illo laboriosam maiores
-                    repudiandae quos!
-                </p>
+            <div class="hero-container">
+                <img
+                    src="./assets/images/profile.jpg"
+                    alt="jocelyn-chen"
+                    loading="lazy"
+                    class="hero-img"
+                />
+                <!-- animate__animated animate__shakeX -->
+                <div class="bio">
+                    <h2 class="bio-title">About Me</h2>
+                    <p class="bio-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+                        dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+                        inventore tempore minus nemo, iste ullam illo laboriosam maiores
+                        repudiandae quos!
+                    </p>
+                </div>
             </div>
+            <a href="#projects" class="scroll-down animate__animated animate__shakeY">
+                <i class="fa-solid fa-chevron-down fa-2xl"></i>
+            </a>
         </section>
 
         <!-- Projects section -->
         <section class="projects" id="projects">
-            <h2 class="projects-title">Some of my Recent Projects</h2>
-            <div class="projects-container">
-                <div class="project-container project-card">
-                    <img
-                        src="assets/images/expenseTracker.png"
-                        alt="expense-tracker"
-                        loading="lazy"
-                        class="project-pic"
-                    />
-                    <h3 class="project-title">Expense Tracker</h3>
-                    <p class="project-details">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-                        ratione vel inventore labore commodi modi quos culpa aut saepe!
-                        Alias!
-                    </p>
+            <h2 class="projects-title">Projects</h2>
+            <div class="project-container">
+                <img
+                    src="./assets/images/profile.jpg"
+                    alt=""
+                    loading="lazy"
+                    class="project-img"
+                />
+                <div class="project-info">
                     <a href="#" target="_blank" class="project-link">Check it Out</a>
+                    <p class="project-type">
+                        Sponsored Senior Capstone
+                    </p>
+                    <p class="project-sponsor">
+                        UW CERSE
+                    </p>
+                    <p class="project-paragraph">
+                        Working with a research team on building a STEM resource hub for university students.
+                    </p>
+                    <a href="#" target="_blank" class="project-link">
+                        <button class="project button">View Case Study</button>
+                    </a>
                 </div>
-                <div class="project-container project-card">
-                    <img
-                        src="assets/images/netflixClone.png"
-                        alt="netflic-clone"
-                        loading="lazy"
-                        class="project-pic"
-                    />
-                    <h3 class="project-title">Netflix Clone</h3>
-                    <p class="project-details">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-                        ratione vel inventore labore commodi modi quos culpa aut saepe!
-                        Alias!
+            </div>
+            <div class="project-container">
+                <div class="project-info">
+                    <p class="project-type">
+                        Sponsored Senior Capstone
                     </p>
-                    <a href="#" target="_blank" class="project-link">Check it Out</a>
+                    <p class="project-sponsor">
+                        UW CERSE
+                    </p>
+                    <p class="project-paragraph">
+                        Working with a research team on building a STEM resource hub for university students.
+                    </p>
+                    <a href="#" target="_blank" class="project-link">
+                        <button class="project button">GO</button>
+                    </a>
                 </div>
-                <div class="project-container project-card">
-                    <img
-                        src="assets/images/greenyEarth.png"
-                        alt="greeny-earth"
-                        loading="lazy"
-                        class="project-pic"
-                    />
-                    <h3 class="project-title">Greeny Earth</h3>
-                    <p class="project-details">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-                        ratione vel inventore labore commodi modi quos culpa aut saepe!
-                        Alias!
-                    </p>
+                <img
+                src="./assets/images/profile.jpg"
+                alt=""
+                loading="lazy"
+                class="project-img"
+                />
+            </div>
+            <div class="project-container">
+                <img
+                    src="./assets/images/profile.jpg"
+                    alt=""
+                    loading="lazy"
+                    class="project-img"
+                />
+                <div class="project-info">
                     <a href="#" target="_blank" class="project-link">Check it Out</a>
+                    <p class="project-type">
+                        Sponsored Senior Capstone
+                    </p>
+                    <p class="project-sponsor">
+                        UW CERSE
+                    </p>
+                    <p class="project-paragraph">
+                        Working with a research team on building a STEM resource hub for university students.
+                    </p>
+                    <a href="#" target="_blank" class="project-link">
+                        <button class="project button">View Case Study</button>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Design Philosophy Section -->
+        <section class="dp-section" id="about">
+            <div class="dp-container">
+                <h2>my design philosophy</h2>>
+                <!-- animate__animated animate__shakeX -->
+                <div class="dp">
+                    <p class="dp-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+                        dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+                        inventore tempore minus nemo, iste ullam illo laboriosam maiores
+                        repudiandae quos!
+                    </p>
                 </div>
             </div>
         </section>
