edit projects section

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                     </p>
                     <p class="bio-paragraph">
                         I am passionate about creating digital products that are inclusive and user-centric. As a designer, 
-                        I seek to make meaningful impacts in the lives of the people that use the products I create.
+                        I seek to bring people together using the products that I create, making meaningful impacts in their lives. 
                     </p>
                     <button class="resume button">
                         resume
