--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                     class="project-img"
                 />
                 <div class="project-info">
-                    <a href="#" target="_blank" class="project-link">Check it Out</a>
+                    <a href="" target="" class="project-link">
+                        <h1 class="project-sponsor">UW CERSE</h1>
+                    </a>
                     <p class="project-type">
                         Sponsored Senior Capstone
                     </p>
-                    <p class="project-sponsor">
-                        UW CERSE
-                    </p>
                     <p class="project-paragraph">
-                        Working with a research team on building a STEM resource hub for university students.
+                        Worked with a research team on building a STEM resource hub for university students, 
+                        leveraging research insights to frame design decisions.
                     </p>
                     <a href="#" target="_blank" class="project-link">
                         <button class="project button">View Case Study</button>
@@ -96,17 +96,18 @@
             </div>
             <div class="project-container">
                 <div class="project-info">
+                    <a href="" target="" class="project-link">
+                        <h1 class="project-sponsor">Robert Half</h1>
+                    </a>
                     <p class="project-type">
-                        Sponsored Senior Capstone
-                    </p>
-                    <p class="project-sponsor">
-                        UW CERSE
+                        Summer Internship
                     </p>
                     <p class="project-paragraph">
-                        Working with a research team on building a STEM resource hub for university students.
+                        Collaborated with a cross-functional team to reinvent and modernize existing client and candidate digital service products,
+                        optimizing the user experience and accelerating business value objectives.
                     </p>
                     <a href="#" target="_blank" class="project-link">
-                        <button class="project button">GO</button>
+                        <button class="project button">View Case Study</button>
                     </a>
                 </div>
                 <img
@@ -124,15 +125,14 @@
                     class="project-img"
                 />
                 <div class="project-info">
-                    <a href="#" target="_blank" class="project-link">Check it Out</a>
+                    <a href="" target="" class="project-link">
+                        <h1 class="project-sponsor">Husky Buddy</h1>
+                    </a>
                     <p class="project-type">
-                        Sponsored Senior Capstone
-                    </p>
-                    <p class="project-sponsor">
-                        UW CERSE
+                        Mobile App Design
                     </p>
                     <p class="project-paragraph">
-                        Working with a research team on building a STEM resource hub for university students.
+                        Designed a mobile app to connect students and increase engagement during online learning.
                     </p>
                     <a href="#" target="_blank" class="project-link">
                         <button class="project button">View Case Study</button>
