typewriter for home page

--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!--CSS Styles -->
-        <link rel="stylesheet" href="./assets/css/about.css" />
+        <link rel="stylesheet" href="./assets/css/styles.css" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Sofia+Sans:wght@400;600&display=swap" rel="stylesheet">
+        
+        <title>About | Jocelyn Chen's Portfolio</title>
     </head>
 
     <body>
@@ -45,7 +47,7 @@
                         I seek to bring people together using the products that I create, making meaningful impacts in their lives. 
                     </p>
                     <button class="resume button">
-                        resume
+                        View Resume &#10142;
                     </button>
                 </div>
             </div>
@@ -71,7 +73,7 @@
                 <div class="bio-grid">
                     <h3>I am..</h3>
                     <ul class="bio-list">
-                        <li>a Taiwanese-American, in which I grew up with an appreciation for family time and lots of food during cultural celebrations</li>
+                        <li>Taiwanese-American, in which I grew up with an appreciation for lots of family time, card games, and food during cultural celebrations</li>
                         <li>an avid baker</li>
                         <li>a foodie, always looking up new food places to try</li>
                         <li>a creative, catch me doodling, knitting, or using the occasional needle and thread</li>
@@ -81,11 +83,9 @@
                     <h3>Outside of design, you can find me..</h3>
                     <ul class="bio-list">
                         <li>trying out new boba places with my friends</li>
-                        <li>baking</li>
                         <li>documenting my foodie adventures</li>
-                        <li>watching Chinese and Korean dramas</li>
-                        <li>listening to music</li>
-                        <li>taking walks</li>
+                        <li>catching up on Chinese and Korean dramas on my watch list</li>
+                        <li>going on drives while listening to music</li>
                     </ul>
                 </div>  
             </div>
