--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
-        <title>Jocelyn Chen | UX Designer</title>
+        <title>Home | Jocelyn Chen's Portfolio</title>
   </head>
 
   <body>
@@ -54,13 +54,19 @@
                 />
                 <!-- animate__animated animate__shakeX -->
                 <div class="bio">
-                    <h2 class="bio-title">About Me</h2>
+                    <h2 class="bio-title">Jocelyn Chen</h2>
                     <p class="bio-text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
                         dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
                         inventore tempore minus nemo, iste ullam illo laboriosam maiores
                         repudiandae quos!
                     </p>
+                    <!-- typed bio -->
+                    <div class="typing-container">
+                        <span id="sentence" class="sentence">Here, take this </span>
+                        <span id="feature-text"></span>
+                        <span class="input-cursor"></span>
+                    </div>
                 </div>
             </div>
             <a href="#projects" class="scroll-down animate__animated animate__shakeY">
@@ -79,35 +85,35 @@
                     class="project-img"
                 />
                 <div class="project-info">
-                    <a href="" target="" class="project-link">
-                        <h1 class="project-sponsor">UW CERSE</h1>
-                    </a>
-                    <p class="project-type">
-                        Sponsored Senior Capstone
+                    <p class="project-sponsor">
+                        UW CERSE / Sponsored Senior Capstone
                     </p>
+                    <a href="" target="" class="project-link">
+                        <h1 class="project-title">STEM Equity Resource Hub</h1>
+                    </a>
                     <p class="project-paragraph">
                         Worked with a research team on building a STEM resource hub for university students, 
                         leveraging research insights to frame design decisions.
                     </p>
                     <a href="#" target="_blank" class="project-link">
-                        <button class="project button">View Case Study</button>
+                        <button class="project button">Read Case Study &rarr; &#10142;</button>
                     </a>
                 </div>
             </div>
             <div class="project-container">
                 <div class="project-info">
-                    <a href="" target="" class="project-link">
-                        <h1 class="project-sponsor">Robert Half</h1>
-                    </a>
-                    <p class="project-type">
-                        Summer Internship
+                    <p class="project-sponsor">
+                        ROBERT HALF / SUMMER INTERNSHIP
                     </p>
+                    <a href="" target="" class="project-link">
+                        <h1 class="project-title">Digital Service Products Modernization</h1>
+                    </a>
                     <p class="project-paragraph">
                         Collaborated with a cross-functional team to reinvent and modernize existing client and candidate digital service products,
                         optimizing the user experience and accelerating business value objectives.
                     </p>
                     <a href="#" target="_blank" class="project-link">
-                        <button class="project button">View Case Study</button>
+                        <button class="project button">Password Protected &rarr; &#10142;</button>
                     </a>
                 </div>
                 <img
@@ -125,24 +131,24 @@
                     class="project-img"
                 />
                 <div class="project-info">
-                    <a href="" target="" class="project-link">
-                        <h1 class="project-sponsor">Husky Buddy</h1>
-                    </a>
-                    <p class="project-type">
-                        Mobile App Design
+                    <p class="project-sponsor">
+                        University of Washington HCDE 318 / Mobile App Design
                     </p>
+                    <a href="" target="" class="project-link">
+                        <h1 class="project-title">Husky Buddy: Creating Student Connections</h1>
+                    </a>
                     <p class="project-paragraph">
                         Designed a mobile app to connect students and increase engagement during online learning.
                     </p>
                     <a href="#" target="_blank" class="project-link">
-                        <button class="project button">View Case Study</button>
+                        <button class="project button">Read Case Study &rarr; &#10142;</button>
                     </a>
                 </div>
             </div>
         </section>
 
         <!-- Design Philosophy Section -->
-        <section class="dp-section" id="about">
+        <section class="design-philosophy" id="about">
             <div class="dp-container">
                 <h2>my design philosophy</h2>>
                 <!-- animate__animated animate__shakeX -->
@@ -158,8 +164,9 @@
         </section>
 
         <!-- Contact section -->
+        <section class="contact-me">
 
-
+        </section>
 
         <!-- Scroll to top -->
         <i class="scroll-up" id="scroll-up">
